Fixed syntax for original thumb scroll to work. (prev and next needed to be outside .scrollable and then form needed to wrap all). Tested and works if ONLY thumb scroll js and jQueryTools js is included. Currently conflicting with other js - I'm guessing the other jQuery library since jQueryTools is it's own jQuery library + more. Removed images_pub.css - now that thumb scroll on admin uses same structure as public. Fixed css in main_nav that cropped up after adding admin nav styles.

--- a/app/assets/stylesheets/images.css.sass
+++ b/app/assets/stylesheets/images.css.sass
@@ -22,6 +22,17 @@ a:active
     form
       width: auto
 
+.items > div
+  float: left
+  width: 535px
+  cursor: pointer
+.items div a span
+  margin: 2px 0 0 0
+  display: block
+  font-size: 11px
+  line-height: 11px
+  color: #414042
+  text-align: center
 
 .scrollable .img
   position: relative
